# aoc

./: .gitignore  .gitmodules  README.md  aoc.cabal  fourmolu.yaml  hie.yaml  new_day.sh
2015/: Day01.hs  Day03.hs  Day04.hs  Main.hs
A2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Main.hs  Solution.hs
A2020/: Advent2020.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayDAY.hs  Main.hs  Parser.hs  Solution.hs
A2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayDAY.hs  Main.hs  Parser.hs
A2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  DayDAY.hs  Grid.hs
A2023/: Day01.hs  DayDAY.hs
app/: Main2021.hs
app/2021/: Main.hs
app/2022/: Main.hs
app/2023/: Main.hs
