cabal-version:       3.0

name:                aoc
version:             2021.3.0
-- synopsis:
-- description:
author:              Ondřej Šebek
maintainer:          xsebek@fi.muni.cz
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

library A2015
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Solution
  hs-source-dirs: A2015
  build-depends: base, containers, bytestring, pureMD5
  default-extensions: LambdaCase, RecordWildCards
  default-language: Haskell2010

executable aoc2015
  main-is: Main.hs
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Solution
  build-depends: base, containers, bytestring, pureMD5, A2015
  default-extensions: OverloadedStrings, LambdaCase, RecordWildCards
  hs-source-dirs: A2015
  default-language: Haskell2010

library A2020
  exposed-modules:
    Parser
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    -- Day20
    Day21
    Day22
    Day23
    Day24
    Day25
  hs-source-dirs: A2020
  -- defaults - I will try to learn them after having them :)
  -- anything that I actually use will have to be copied to exec
  default-extensions:
    -- trivial
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    -- nice
    BangPatterns
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    RecordWildCards
    TupleSections
    -- derive anything
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- types
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  build-depends:
    base, containers, unordered-containers, vector,
    bytestring, megaparsec, text,
    optics-core, criterion
  default-language: Haskell2010

executable aoc2020
  main-is: Main.hs
  build-depends:
    base, containers, unordered-containers, vector,
    bytestring, megaparsec, text,
    optics-core, criterion
  other-modules:
    Parser
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    -- Day20
    Day21
    Day22
    Day23
    Day24
    Day25
  default-extensions:
    -- trivial
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    -- nice
    BangPatterns
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    RecordWildCards
    TupleSections
    -- derive anything
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- types
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  hs-source-dirs: A2020
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wincomplete-record-updates


library A2021
  build-depends:
    base, containers, unordered-containers,
    array, vector,
    bytestring, megaparsec, text,
    -- optics-core, criterion,
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    -- Day06
    -- Day07
    -- Day08
    -- Day09
    -- Day10
    -- Day11
    -- Day12
    -- Day13
    -- Day14
    -- Day15
    -- Day16
    -- Day17
    -- Day18
    -- Day19
    -- Day20
    -- Day21
    -- Day22
    -- Day23
    -- Day24
    -- Day25
  default-extensions:
    -- trivial
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    -- nice
    BangPatterns
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    RecordWildCards
    TupleSections
    -- derive anything
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    -- types
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  hs-source-dirs: A2021
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wincomplete-record-updates

executable aoc2021
  main-is: Main2021.hs
  build-depends:
    base, A2021
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wincomplete-record-updates
