cabal-version:       3.0

name:                aoc
version:             2021.3.0
-- synopsis:
-- description:
author:              Ondřej Šebek
maintainer:          xsebek@fi.muni.cz
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

common myHaskell202X
  default-language: GHC2021
  default-extensions: LambdaCase, RecordWildCards
  ghc-options:
    -O2
    -Wall
    -Wno-x-partial
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wincomplete-record-updates

library A2015
  import: myHaskell202X
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Solution
  hs-source-dirs: A2015
  build-depends: base, containers, bytestring, pureMD5

executable aoc2015
  import: myHaskell202X
  main-is: Main.hs
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Solution
  build-depends: base, containers, bytestring, pureMD5, A2015
  default-extensions: OverloadedStrings, RecordWildCards
  hs-source-dirs: A2015


library A2020
  import: myHaskell202X
  exposed-modules:
    Parser
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    -- Day20
    Day21
    Day22
    Day23
    Day24
    Day25
  hs-source-dirs: A2020
  default-extensions: OverloadedStrings
  build-depends:
    base, containers, unordered-containers, vector,
    bytestring, megaparsec, text,
    optics-core, criterion

executable aoc2020
  import: myHaskell202X
  main-is: Main.hs
  build-depends:
    base, containers, unordered-containers, vector,
    bytestring, megaparsec, text,
    optics-core, criterion
  other-modules:
    Parser
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    -- Day20
    Day21
    Day22
    Day23
    Day24
    Day25
  hs-source-dirs: A2020
  default-extensions: OverloadedStrings, TypeFamilies

library A2021
  import: myHaskell202X
  build-depends:
    base, containers, unordered-containers,
    array, vector, linear,
    bytestring, megaparsec, text,
    search-algorithms,
    optics, criterion,
  other-modules:
    Parser
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
  hs-source-dirs: A2021
  default-extensions: OverloadedStrings, TypeFamilies

executable aoc2021
  import: myHaskell202X
  main-is: Main.hs
  build-depends:
    base, A2021
  hs-source-dirs: app/2021
  default-extensions: OverloadedStrings, TypeFamilies

library A2022
  import: myHaskell202X
  build-depends:
    base, containers, unordered-containers,
    array, vector, linear,
    bytestring, megaparsec, text, split,
    search-algorithms, optics
  other-modules:
    Parser
    Grid
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    -- Day15
    -- Day16
    -- Day17
    -- Day18
    -- Day19
    -- Day20
    -- Day21
    -- Day22
    -- Day23
    -- Day24
    -- Day25
  hs-source-dirs: A2022

executable aoc2022
  import: myHaskell202X
  main-is: Main.hs
  build-depends:
    base, A2022
  hs-source-dirs: app/2022


library A2023
  import: myHaskell202X
  build-depends:
    base, containers,
    -- unordered-containers,
    -- array, vector, linear,
    -- bytestring, megaparsec, text, split,
    -- search-algorithms, optics
  -- other-modules:
  --   Parser
  exposed-modules:
    Day01
    -- Day02
    -- Day03
    -- Day04
    -- Day05
    -- Day06
    -- Day07
    -- Day08
    -- Day09
    -- Day10
    -- Day11
    -- Day12
    -- Day13
    -- Day14
    -- Day15
    -- Day16
    -- Day17
    -- Day18
    -- Day19
    -- Day20
    -- Day21
    -- Day22
    -- Day23
    -- Day24
    -- Day25
  hs-source-dirs: A2023

executable aoc2023
  import: myHaskell202X
  main-is: Main.hs
  build-depends:
    base, A2023
  hs-source-dirs: app/2023


